--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
-    background: lightgray;
+    background: white;
 }
 ol, ul {
 	list-style: none;
@@ -51,6 +51,44 @@ table {
 * {
     box-sizing: border-box;
 }
+
+/*header*/
+header nav {
+	display: flex;
+	flex-flow: row nowrap;
+	width: 700px;
+	vertical-align: top;
+	margin-top: 35px;
+  }
+  
+  header {
+	display: flex;
+  }
+  
+  header nav a {
+	margin-right: 65px;
+	font-size: 14px;
+	color: black;
+	text-decoration: none;
+  }
+  
+  header nav a:hover {
+	text-decoration: underline;
+  }
+  
+  header nav a:first-child {
+	margin-left: 0;
+  }
+  
+  header nav a:last-child {
+	margin-right: 0;
+  }
+  
+  header .logo {
+    display: flex;
+    margin-left: 25px;
+  }
+
 
 html, body {
     height: 100%;
