--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,7 @@ header nav {
 	display: flex;
 	flex-flow: row nowrap;
 	vertical-align: top;
-    margin-top: 20px;
+    margin-top: 35px;
     align-items: baseline;
     justify-content: center;
   }
@@ -113,10 +113,33 @@ p {
     margin: 0 auto;
 }
 
+button {
+    font-size: 16px;
+    padding: 5px 40px 5px 40px;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 4px;
+  }
+
 .top-banner {
     display: flex;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.top-horizontal {
+    display: flex;
+    flex-wrap: wrap;
+    
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+
+.top-about .top-horizontal{
+    margin: 20px 10px;
+    width: 95%;
+    
+    padding-bottom: 20px; 
+    
 }
 
 .top-content {
@@ -207,11 +230,30 @@ p {
 }
 
 .bottom-content .text-container {
-    padding-right: 4%;
+    margin-right: 4%;
+    padding-bottom: 20px;
+}
+
+.text-container {
+    border-bottom: 1px dashed black;
 }
 
 .bottom-content .text-container:last-child {
     padding-right: 0;
+}
+
+.bottom-text {
+    display: flex;
+    margin: 0 2% 20px;
+    justify-content: space-around;
+}
+
+.bottom-text {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    margin: 50px 0 50px 0;
 }
 
 footer {
